--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rdf2hk",
-	"version": "1.1.5",
+	"version": "1.1.6",
 	"description": "This library converts RDF to Hyperknowledge Description",
 	"main": "index.js",
 	"author": "IBM Research",
@@ -24,6 +24,10 @@
 		{
 			"name": "Wallas Santos",
 			"email": "wallas.sousa@ibm.com"
+		},
+		{
+			"name": "Elton Soares",
+			"email": "eltons@ibm.com"
 		}
 	],
 	"license": "MIT",
