--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rdf2hk",
-	"version": "1.1.13",
+	"version": "1.1.14",
 	"description": "This library converts RDF to Hyperknowledge Description",
 	"main": "index.js",
 	"author": "IBM Research",
@@ -38,6 +38,7 @@
 		"ninja-util": "^1.1.0",
 		"punycode": "^2.1.1",
 		"rdfxml-streaming-parser": "^1.3.2",
-		"uuid": "^3.1.0"
+		"uuid": "^3.1.0",
+		"@rdfjs/data-model": "^1.1.2"
 	}
 }
