--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"punycode": "^2.1.1",
 		"rdfxml-streaming-parser": "^1.3.2",
 		"uuid": "^3.1.0",
-		"@rdfjs/data-model": "^1.1.2"
+		"@rdfjs/data-model": "^1.1.2",
+		"sparqljs": "^3.2.0"
 	}
 }
