--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"punycode": "^2.1.1",
 		"rdfxml-streaming-parser": "^1.3.2",
 		"sparqljs": "^3.4.1",
-		"uuid": "^3.1.0"
+		"uuid": "^3.1.0",
+		"csv": "^5.3.2"
 	}
 }
