--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"contributors": [
 		{
 			"name": "Marcelo Machado",
-			"email": "marcelo.machado@ibm.com"
+			"email": "mmachado@ibm.com"
 		},
 		{
 			"name": "Marcio Moreno",
@@ -33,13 +33,13 @@
 	"license": "MIT",
 	"dependencies": {
 		"@rdfjs/data-model": "^1.1.2",
-		"hklib": "^2.1.2",
+		"hklib": "^2.7.0",
 		"md5.js": "^1.3.5",
 		"n3": "^1.8.0",
 		"ninja-util": "^1.1.0",
 		"punycode": "^2.1.1",
 		"rdfxml-streaming-parser": "^1.3.2",
-		"sparqljs": "^3.4.2",
+		"sparqljs": "^3.4.3",
 		"uuid": "^3.1.0"
 	}
 }
