--- a/package.json
+++ b/package.json
@@ -41,5 +41,12 @@
 		"rdfxml-streaming-parser": "^1.3.2",
 		"sparqljs": "^3.4.3",
 		"uuid": "^3.1.0"
+	},
+	"scripts": {
+		"tests": "mocha test test/setup.json --timeout 360000"
+	},
+	"devDependencies": {
+		"chai": "^4.3.4",
+		"mocha": "^9.1.3"
 	}
 }
