--- a/package.json
+++ b/package.json
@@ -33,13 +33,20 @@
 	"license": "MIT",
 	"dependencies": {
 		"@rdfjs/data-model": "^1.1.2",
-		"hklib": "^2.7.0",
+		"hklib": "^2.9.0",
 		"md5.js": "^1.3.5",
 		"n3": "^1.8.0",
-		"ninja-util": "^1.1.0",
+		"ninja-util": "^1.2.3",
 		"punycode": "^2.1.1",
 		"rdfxml-streaming-parser": "^1.3.2",
 		"sparqljs": "^3.4.3",
 		"uuid": "^3.1.0"
+	},
+	"scripts": {
+		"tests": "mocha test test/setup.json --timeout 360000"
+	},
+	"devDependencies": {
+		"chai": "^4.3.4",
+		"mocha": "^9.1.3"
 	}
 }
