--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"uuid": "^3.1.0"
 	},
 	"scripts": {
-		"tests": "mocha test test/setup.json --timeout 360000"
+		"tests": "mocha test/integration test/setup.json --timeout 360000"
 	},
 	"devDependencies": {
 		"chai": "^4.3.4",
