--- a/package.json
+++ b/package.json
@@ -42,6 +42,15 @@
 		"sparqljs": "^3.4.3",
 		"uuid": "^3.1.0"
 	},
+  "keywords": [
+    "hyperknowledge",
+    "hk",
+    "hyperlinkedgraph",
+    "rdf",
+    "owl",
+    "turtle",
+    "semantic web"
+  ],
 	"scripts": {
 		"tests": "mocha test/integration test/setup.json --timeout 360000"
 	},
