--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "license": "MIT",
   "dependencies": {
     "@rdfjs/data-model": "^1.1.2",
-    "hklib": "github:ibm-hyperknowledge/hklib#dev",
+    "hklib": "^3.0.0",
     "md5.js": "^1.3.5",
     "n3": "^1.8.0",
     "ninja-util": "^1.2.3",
