--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdf2hk",
-  "version": "1.6.7",
+  "version": "1.8.0",
   "description": "This library converts RDF to Hyperknowledge Description",
   "main": "index.js",
   "author": "IBM Research",
@@ -33,7 +33,7 @@
   "license": "MIT",
   "dependencies": {
     "@rdfjs/data-model": "^1.1.2",
-    "hklib": "github:ibm-hyperknowledge/hklib#main",
+    "hklib": "^4.2.0",
     "md5.js": "^1.3.5",
     "n3": "^1.8.0",
     "ninja-util": "^1.2.3",
