Revert "Added customizable parser and some tests."
This reverts commit 10daeb9928df1680a11259c28d62c139a19757df.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "semantic web"
   ],
   "scripts": {
-    "test": "mocha test test/setup.json --timeout 360000"
+    "tests": "mocha test/integration test/setup.json --timeout 360000"
   },
   "devDependencies": {
     "chai": "^4.3.4",
