--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "md5.js": "^1.3.5",
     "n3": "^1.16.1",
     "ninja-util": "^1.2.3",
-    "package.json": "^2.0.1",
     "punycode": "^2.1.1",
     "rdfxml-streaming-parser": "^1.3.2",
     "sparqljs": "^3.4.3",
@@ -54,7 +53,7 @@
     "semantic web"
   ],
   "scripts": {
-    "test": "mocha test test/setup.json --timeout 360000"
+    "test": "mocha test test/**/*.js --timeout 360000"
   },
   "devDependencies": {
     "chai": "^4.3.4",
