--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdf2hk",
-  "version": "1.10.11",
+  "version": "1.10.12",
   "description": "This library converts RDF to Hyperknowledge Description",
   "main": "index.js",
   "author": "IBM Research",
@@ -35,7 +35,7 @@
     "@rdfjs/data-model": "^1.1.2",
     "hklib": "^5.3.1",
     "md5.js": "^1.3.5",
-    "n3": "1.16.2",
+    "n3": "1.16.3",
     "ninja-util": "^1.2.3",
     "punycode": "^2.1.1",
     "rdfxml-streaming-parser": "^1.3.2",
@@ -53,7 +53,8 @@
     "semantic web"
   ],
   "scripts": {
-    "test": "mocha test test/**/*.js --timeout 360000"
+    "test": "mocha test test/**/*.js --timeout 360000",
+    "clean-and-install": "rm -rf node_modules && rm -f package-lock.json && npm install"
   },
   "devDependencies": {
     "chai": "^4.3.4",
